--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4309,7 +4309,7 @@
     </div>
 </details>
 
-<!-- Madde 104 -->
+<!-- Madde 104 (Tam ve Eksiksiz Hali) -->
 <details id="madde-104" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
         <span class="mr-3 text-xl">📘</span> Madde 104 – Görev ve Yetkileri
@@ -4319,7 +4319,61 @@
             Cumhurbaşkanı Devletin başıdır. <strong>Yürütme yetkisi Cumhurbaşkanına aittir.</strong>
         </blockquote>
         <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-            Cumhurbaşkanı, Devlet başkanı sıfatıyla Türkiye Cumhuriyetini ve Türk Milletinin birliğini temsil eder; Anayasanın uygulanmasını, Devlet organlarının düzenli ve uyumlu çalışmasını temin eder. (...) <strong>Kanunları yayımlar.</strong> <strong>Kanunları tekrar görüşülmek üzere Türkiye Büyük Millet Meclisine geri gönderir.</strong> <strong>Anayasa Mahkemesinde iptal davası açar.</strong> <strong>Cumhurbaşkanı yardımcıları ile bakanları atar ve görevlerine son verir.</strong> <strong>Üst kademe kamu yöneticilerini atar, görevlerine son verir</strong> (...) Milletlerarası andlaşmaları onaylar ve yayımlar. Anayasa değişikliklerini gerekli gördüğü takdirde halkoyuna sunar. Milli güvenlik politikalarını belirler ve gerekli tedbirleri alır. Türkiye Büyük Millet Meclisi adına Türk Silahlı Kuvvetlerinin Başkomutanlığını temsil eder. Türk Silahlı Kuvvetlerinin kullanılmasına karar verir. Sürekli hastalık, sakatlık ve kocama sebebiyle <strong>kişilerin cezalarını hafifletir veya kaldırır.</strong> Cumhurbaşkanı, yürütme yetkisine ilişkin konularda <strong>Cumhurbaşkanlığı kararnamesi çıkarabilir.</strong> Anayasanın ikinci kısmının birinci ve ikinci bölümlerinde yer alan <strong>temel haklar, kişi hakları ve ödevleriyle dördüncü bölümde yer alan siyasi haklar ve ödevler Cumhurbaşkanlığı kararnamesiyle düzenlenemez.</strong> <strong>Anayasada münhasıran kanunla düzenlenmesi öngörülen konularda</strong> Cumhurbaşkanlığı kararnamesi çıkarılamaz. <strong>Kanunda açıkça düzenlenen konularda</strong> Cumhurbaşkanlığı kararnamesi çıkarılamaz. Cumhurbaşkanlığı kararnamesi ile kanunlarda farklı hükümler bulunması halinde, <strong>kanun hükümleri uygulanır.</strong> Türkiye Büyük Millet Meclisinin aynı konuda kanun çıkarması durumunda, <strong>Cumhurbaşkanlığı kararnamesi hükümsüz hale gelir.</strong> Cumhurbaşkanı, kanunların uygulanmasını sağlamak üzere ve bunlara aykırı olmamak şartıyla, <strong>yönetmelikler çıkarabilir.</strong> (...)
+            Cumhurbaşkanı, Devlet başkanı sıfatıyla Türkiye Cumhuriyetini ve Türk Milletinin birliğini temsil eder; Anayasanın uygulanmasını, Devlet organlarının düzenli ve uyumlu çalışmasını temin eder.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Gerekli gördüğü takdirde, yasama yılının ilk günü Türkiye Büyük Millet Meclisinde açılış konuşmasını yapar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Ülkenin iç ve dış siyaseti hakkında Meclise mesaj verir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Kanunları yayımlar.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Kanunları tekrar görüşülmek üzere Türkiye Büyük Millet Meclisine geri gönderir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kanunların, Türkiye Büyük Millet Meclisi İçtüzüğünün tümünün veya belirli hükümlerinin Anayasaya şekil veya esas bakımından aykırı oldukları gerekçesiyle <strong>Anayasa Mahkemesinde iptal davası açar.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Cumhurbaşkanı yardımcıları ile bakanları atar ve görevlerine son verir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Üst kademe kamu yöneticilerini atar, görevlerine son verir</strong> ve bunların atanmalarına ilişkin usul ve esasları Cumhurbaşkanlığı kararnamesiyle düzenler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yabancı devletlere Türkiye Cumhuriyetinin temsilcilerini gönderir, Türkiye Cumhuriyetine gönderilecek yabancı devlet temsilcilerini kabul eder.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Milletlerarası andlaşmaları onaylar ve yayımlar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Anayasa değişikliklerine ilişkin kanunları gerekli gördüğü takdirde halkoyuna sunar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Milli güvenlik politikalarını belirler ve gerekli tedbirleri alır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi adına Türk Silahlı Kuvvetlerinin Başkomutanlığını temsil eder.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türk Silahlı Kuvvetlerinin kullanılmasına karar verir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Sürekli hastalık, sakatlık ve kocama sebebiyle <strong>kişilerin cezalarını hafifletir veya kaldırır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı, yürütme yetkisine ilişkin konularda <strong>Cumhurbaşkanlığı kararnamesi çıkarabilir.</strong> Anayasanın ikinci kısmının birinci ve ikinci bölümlerinde yer alan <strong>temel haklar, kişi hakları ve ödevleriyle dördüncü bölümde yer alan siyasi haklar ve ödevler Cumhurbaşkanlığı kararnamesiyle düzenlenemez.</strong> <strong>Anayasada münhasıran kanunla düzenlenmesi öngörülen konularda</strong> Cumhurbaşkanlığı kararnamesi çıkarılamaz. <strong>Kanunda açıkça düzenlenen konularda</strong> Cumhurbaşkanlığı kararnamesi çıkarılamaz. Cumhurbaşkanlığı kararnamesi ile kanunlarda farklı hükümler bulunması halinde, <strong>kanun hükümleri uygulanır.</strong> Türkiye Büyük Millet Meclisinin aynı konuda kanun çıkarması durumunda, <strong>Cumhurbaşkanlığı kararnamesi hükümsüz hale gelir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı, kanunların uygulanmasını sağlamak üzere ve bunlara aykırı olmamak şartıyla, <strong>yönetmelikler çıkarabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Kararnameler ve yönetmelikler, yayımdan sonraki bir tarih belirlenmemişse, Resmî Gazetede yayımlandıkları gün yürürlüğe girer.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı, ayrıca Anayasada ve kanunlarda verilen seçme ve atama görevleri ile diğer görevleri yerine getirir ve yetkileri kullanır.
         </blockquote>
         <div class="highlight-box mt-4">
             <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Özel Af (CB) vs. Genel Af (TBMM)</h6>
@@ -4337,6 +4391,7 @@
     </div>
 </details>
 
+                
                 
 </section>
  
