--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4390,7 +4390,51 @@
         </div>
     </div>
 </details>
-
+<!-- Madde 105 -->
+<details id="madde-105" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 105 – Cumhurbaşkanının Cezai Sorumluluğu
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Cumhurbaşkanı hakkında, bir suç işlediği iddiasıyla Türkiye Büyük Millet Meclisi <strong>üye tamsayısının salt çoğunluğunun vereceği önergeyle</strong> soruşturma açılması istenebilir. Meclis, önergeyi en geç bir ay içinde görüşür ve <strong>üye tamsayısının beşte üçünün gizli oyuyla soruşturma açılmasına karar verebilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Soruşturma açılmasına karar verilmesi halinde, Meclisteki siyasi partilerin, güçleri oranında komisyona verebilecekleri üye sayısının üç katı olarak gösterecekleri adaylar arasından her siyasi parti için ayrı ayrı ad çekme suretiyle kurulacak <strong>onbeş kişilik bir komisyon tarafından soruşturma yapılır.</strong> Komisyon, soruşturma sonucunu belirten raporunu <strong>iki ay içinde</strong> Meclis Başkanlığına sunar. Soruşturmanın bu sürede bitirilememesi halinde, komisyona <strong>bir aylık yeni ve kesin bir süre</strong> verilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Rapor Başkanlığa verildiği tarihten itibaren on gün içinde dağıtılır, dağıtımından itibaren on gün içinde Genel Kurulda görüşülür. Türkiye Büyük Millet Meclisi, <strong>üye tamsayısının üçte ikisinin gizli oyuyla Yüce Divana sevk kararı alabilir.</strong> <strong>Yüce Divan yargılaması üç ay içinde tamamlanır</strong>, bu sürede tamamlanamazsa bir defaya mahsus olmak üzere üç aylık ek süre verilir, yargılama bu sürede kesin olarak tamamlanır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Hakkında soruşturma açılmasına karar verilen Cumhurbaşkanı, seçim kararı alamaz.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Yüce Divanda seçilmeye engel bir suçtan mahkûm edilen Cumhurbaşkanının görevi sona erer.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanının görevde bulunduğu sürede işlediği iddia edilen suçlar için <strong>görevi bittikten sonra da bu madde hükmü uygulanır.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Hafıza Tekniği: Cumhurbaşkanını Yargılama Piramidi (301 ➡️ 360 ➡️ 400 Formülü)</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">Bu karmaşık süreci, giderek zorlaşan üç aşamalı bir piramit gibi düşünün. Her aşamayı geçmek için daha fazla milletvekilinin oyu gerekir:</p>
+          <div class="text-center space-y-2 font-semibold">
+              <div class="p-3 bg-red-100 border-b-4 border-red-500 rounded-t-lg">ZİRVE 🧗 400 OY (2/3) ➡️ YÜCE DİVAN'A SEVK</div>
+              <div class="p-3 bg-amber-100 border-b-4 border-amber-500">ORTA KAT ⛰️ 360 OY (3/5) ➡️ SORUŞTURMA AÇILMASI</div>
+              <div class="p-3 bg-green-100 border-b-4 border-green-500 rounded-b-lg">TABAN 🏕️ 301 OY (Salt Çoğunluk) ➡️ SORUŞTURMA İSTEMİ (ÖNERGE)</div>
+          </div>
+        </div>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Yargılama Süreci Adım Adım</h6>
+          <ol class="list-decimal pl-5 text-sm space-y-2">
+            <li><strong>Soruşturma "İstemek":</strong> <strong>301 vekilin</strong> önergesiyle istenir.</li>
+            <li><strong>Soruşturma "Açmak":</strong> Meclis, en geç 1 ay içinde görüşür ve <strong>360 vekilin</strong> gizli oyuyla açar. <span class="text-red-600 font-semibold">(Sonuç: CB seçim kararı alamaz.)</span></li>
+            <li><strong>Soruşturmayı "Yürütmek":</strong> <strong>15 kişilik</strong> özel bir komisyon, <strong>2+1 ay</strong> içinde raporunu tamamlar.</li>
+            <li><strong>Yüce Divan'a "Sevk Etmek":</strong> Meclis, <strong>400 vekilin</strong> gizli oyuyla sevk kararı alabilir.</li>
+            <li><strong>"Yargılamak":</strong> Yüce Divan (AYM), <strong>3+3 ay</strong> içinde yargılamayı tamamlar. <span class="text-red-600 font-semibold">(Sonuç: Mahkumiyet halinde CB'nin görevi sona erer.)</span></li>
+           </ol>
+        </div>
+    </div>
+</details>
                 
                 
 </section>
