--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4418,9 +4418,9 @@
           <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Hafıza Tekniği: Cumhurbaşkanını Yargılama Piramidi (301 ➡️ 360 ➡️ 400 Formülü)</h6>
           <p style="text-align: justify;" class="text-sm mb-3">Bu karmaşık süreci, giderek zorlaşan üç aşamalı bir piramit gibi düşünün. Her aşamayı geçmek için daha fazla milletvekilinin oyu gerekir:</p>
           <div class="text-center space-y-2 font-semibold">
-              <div class="p-3 bg-red-100 border-b-4 border-red-500 rounded-t-lg">ZİRVE 🧗 400 OY (2/3) ➡️ YÜCE DİVAN'A SEVK</div>
-              <div class="p-3 bg-amber-100 border-b-4 border-amber-500">ORTA KAT ⛰️ 360 OY (3/5) ➡️ SORUŞTURMA AÇILMASI</div>
-              <div class="p-3 bg-green-100 border-b-4 border-green-500 rounded-b-lg">TABAN 🏕️ 301 OY (Salt Çoğunluk) ➡️ SORUŞTURMA İSTEMİ (ÖNERGE)</div>
+              <div class="p-3 bg-red-100 border-b-4 border-red-500 rounded-t-lg">400 OY (2/3) ➡️ YÜCE DİVAN'A SEVK</div>
+              <div class="p-3 bg-amber-100 border-b-4 border-amber-500">360 OY (3/5) ➡️ SORUŞTURMA AÇILMASI</div>
+              <div class="p-3 bg-green-100 border-b-4 border-green-500 rounded-b-lg">301 OY (Salt Çoğunluk) ➡️ SORUŞTURMA İSTEMİ (ÖNERGE)</div>
           </div>
         </div>
         <div class="strategy-box mt-4">
@@ -4435,6 +4435,68 @@
         </div>
     </div>
 </details>
+      <!-- Madde 106 -->
+<details id="madde-106" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 106 – Cumhurbaşkanı Yardımcıları, Vekâlet ve Bakanlar
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Cumhurbaşkanı, seçildikten sonra bir veya daha fazla Cumhurbaşkanı yardımcısı atayabilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanlığı makamının herhangi bir nedenle boşalması halinde, <strong>kırkbeş gün içinde Cumhurbaşkanı seçimi yapılır.</strong> Yenisi seçilene kadar Cumhurbaşkanı yardımcısı Cumhurbaşkanlığına vekâlet eder ve Cumhurbaşkanına ait yetkileri kullanır. <strong>Genel seçime bir yıl veya daha az kalmışsa Türkiye Büyük Millet Meclisi seçimi de Cumhurbaşkanı seçimi ile birlikte yenilenir.</strong> Genel seçime bir yıldan fazla kalmışsa seçilen Cumhurbaşkanı Türkiye Büyük Millet Meclisi seçim tarihine kadar görevine devam eder. Kalan süreyi tamamlayan Cumhurbaşkanı açısından bu süre dönemden sayılmaz. Türkiye Büyük Millet Meclisi genel seçimlerinin yapılacağı tarihte her iki seçim birlikte yapılır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanının <strong>hastalık ve yurt dışına çıkma gibi sebeplerle geçici olarak görevinden ayrılması hallerinde, Cumhurbaşkanı yardımcısı Cumhurbaşkanına vekâlet eder</strong> ve Cumhurbaşkanına ait yetkileri kullanır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı yardımcıları ve bakanlar, <strong>milletvekili seçilme yeterliliğine sahip olanlar arasından Cumhurbaşkanı tarafından atanır ve görevden alınır.</strong> Cumhurbaşkanı yardımcıları ve bakanlar, 81 inci maddede yazılı şekilde Türkiye Büyük Millet Meclisi önünde andiçerler. <strong>Türkiye Büyük Millet Meclisi üyeleri, Cumhurbaşkanı yardımcısı veya bakan olarak atanırlarsa üyelikleri sona erer.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı yardımcıları ve bakanlar, Cumhurbaşkanına karşı sorumludur. Cumhurbaşkanı yardımcıları ve bakanlar hakkında görevleriyle ilgili suç işledikleri iddiasıyla, Türkiye Büyük Millet Meclisi <strong>üye tamsayısının salt çoğunluğunun vereceği önergeyle</strong> soruşturma açılması istenebilir. Meclis, önergeyi en geç bir ay içinde görüşür ve <strong>üye tamsayısının beşte üçünün gizli oyuyla soruşturma açılmasına karar verebilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Soruşturma açılmasına karar verilmesi halinde, Meclisteki siyasi partilerin, güçleri oranında komisyona verebilecekleri üye sayısının üç katı olarak gösterecekleri adaylar arasından, her siyasi parti için ayrı ayrı ad çekme suretiyle kurulacak onbeş kişilik bir komisyon tarafından soruşturma yapılır. Komisyon, soruşturma sonucunu belirten raporunu iki ay içinde Meclis Başkanlığına sunar. Soruşturmanın bu sürede bitirilememesi halinde, komisyona bir aylık yeni ve kesin bir süre verilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Rapor Başkanlığa verildiği tarihten itibaren on gün içinde dağıtılır ve dağıtımından itibaren on gün içinde Genel Kurulda görüşülür. Türkiye Büyük Millet Meclisi, <strong>üye tamsayısının üçte ikisinin gizli oyuyla Yüce Divana sevk kararı alabilir.</strong> Yüce Divan yargılaması üç ay içinde tamamlanır, bu sürede tamamlanamazsa bir defaya mahsus olmak üzere üç aylık ek süre verilir, yargılama bu sürede kesin olarak tamamlanır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Bu kişilerin görevde bulundukları sürede, görevleriyle ilgili işledikleri iddia edilen suçlar bakımından, görevleri bittikten sonra da beşinci, altıncı ve yedinci fıkra hükümleri uygulanır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yüce Divanda seçilmeye engel bir suçtan mahkûm edilen Cumhurbaşkanı yardımcısı veya bakanın görevi sona erer.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanı yardımcıları ve bakanlar, <strong>görevleriyle ilgili olmayan suçlarda yasama dokunulmazlığına ilişkin hükümlerden yararlanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Bakanlıkların kurulması, kaldırılması, görevleri ve yetkileri, teşkilat yapısı</strong> ile merkez ve taşra teşkilatlarının kurulması <strong>Cumhurbaşkanlığı kararnamesiyle düzenlenir.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Karşılaştırmalı Tablo: İki Farklı Vekâlet Durumu</h6>
+          <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2">Durum</th><th class="border border-slate-300 p-2">GEÇİCİ AYRILMA (Hastalık, Yurt Dışı)</th><th class="border border-slate-300 p-2">MAKAMİN BOŞALMASI (Ölüm, İstifa)</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-slate-300 p-2 font-medium">Kim Vekâlet Eder?</td><td class="border border-slate-300 p-2">CB Yardımcısı</td><td class="border border-slate-300 p-2">CB Yardımcısı</td></tr>
+                    <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">Sonuç Ne Olur?</td><td class="border border-slate-300 p-2">CB dönünce görevine devam eder.</td><td class="border border-slate-300 p-2"><strong>45 GÜN İÇİNDE</strong> CB seçimi yapılır.</td></tr>
+                    <tr><td class="border border-slate-300 p-2 font-medium">TBMM Seçimi Etkilenir mi?</td><td class="border border-slate-300 p-2">Hayır.</td><td class="border border-slate-300 p-2"><strong>EVET, EĞER...</strong> genel seçime <strong>1 yıl veya daha az kalmışsa</strong> TBMM seçimi de yenilenir.</td></tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Bakanların Çifte Hukuki Koruması</h6>
+          <p style="text-align: justify;" class="text-sm">Bir bakanın cezai sorumluluğu, suçun niteliğine göre ikiye ayrılır:</p>
+           <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Görevle İlgili Suçlar:</strong> Soruşturma usulü, tıpkı Cumhurbaşkanı gibi Meclis'te <strong>301-360-400 formülüne</strong> tabidir. Yargılamayı <strong>Yüce Divan</strong> yapar.</li>
+            <li><strong>Görevle İlgili Olmayan (Kişisel) Suçlar:</strong> Aynen bir milletvekili gibi <strong>yasama dokunulmazlığı</strong> zırhından yararlanırlar. Yargılanabilmeleri için Meclis'in dokunulmazlığı kaldırması gerekir.</li>
+          </ul>
+        </div>
+    </div>
+</details>          
                 
                 
 </section>
