--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -4497,6 +4497,90 @@
         </div>
     </div>
 </details>          
+                <!-- Madde 107 & 109-115 -->
+<details id="madde-107-115" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
+        <span class="mr-3 text-xl">📘</span> Madde 107, 109-115 – Cumhurbaşkanlığı Genel Sekreterliği ve Bakanlar Kurulu (Mülga)
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            (Mülga: 21/1/2017-6771/16 md.)
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu maddeler (Cumhurbaşkanlığı Genel Sekreterliği, Bakanlar Kurulu'nun kuruluşu, güvenoyu, görevleri, tüzükler vb.), parlamenter sistemin temelini oluşturan kurumlardı. 2017 Anayasa değişikliği ile bu kurumlar tamamen kaldırıldığı için, bu maddelerin tamamı <strong>yürürlükten kaldırılmıştır (Mülga edilmiştir).</strong></p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 108 -->
+<details id="madde-108" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 108 – Devlet Denetleme Kurulu
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            İdarenin hukuka uygunluğunun, düzenli ve verimli şekilde yürütülmesinin ve geliştirilmesinin sağlanması amacıyla, <strong>Cumhurbaşkanlığına bağlı olarak kurulan</strong> Devlet Denetleme Kurulu, <strong>Cumhurbaşkanının isteği üzerine</strong>, <strong>tüm kamu kurum ve kuruluşlarında</strong> ve sermayesinin yarısından fazlasına bu kurum ve kuruluşların katıldığı her türlü kuruluşta, <strong>kamu kurumu niteliğinde olan meslek kuruluşlarında</strong>, her düzeydeki <strong>işçi ve işveren meslek kuruluşlarında</strong>, <strong>kamuya yararlı derneklerle vakıflarda</strong>, her türlü idari soruşturma, inceleme, araştırma ve denetlemeleri yapar.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>(...) yargı organları, Devlet Denetleme Kurulunun görev alanı dışındadır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet Denetleme Kurulunun <strong>Başkan ve üyeleri, Cumhurbaşkanınca atanır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet Denetleme Kurulunun işleyişi, üyelerinin görev süresi ve diğer özlük işleri, <strong>Cumhurbaşkanlığı kararnamesiyle düzenlenir.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>DDK'nın Denetim Alanı (Kimi Denetler, Kimi Denetleyemez?)</h6>
+          <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2 text-green-700">✅ DENETLEYEBİLDİKLERİ</th><th class="border border-slate-300 p-2 text-red-700">❌ DENETLEYEMEDİĞİ TEK YER</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-slate-300 p-2">Tüm kamu kurumları (TSK dahil)</td><td class="border border-slate-300 p-2" rowspan="5" style="vertical-align: middle; text-align: center;"><strong>YARGI ORGANLARI</strong></td></tr>
+                    <tr class="bg-slate-50"><td class="border border-slate-300 p-2">Sermayesinin yarısından fazlası kamuya ait kuruluşlar</td></tr>
+                    <tr><td class="border border-slate-300 p-2">Kamu kurumu niteliğindeki meslek kuruluşları (Barolar, Odalar)</td></tr>
+                    <tr class="bg-slate-50"><td class="border border-slate-300 p-2">İşçi ve işveren meslek kuruluşları (Sendikalar)</td></tr>
+                     <tr><td class="border border-slate-300 p-2">Kamuya yararlı dernekler ve vakıflar</td></tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 116 -->
+<details id="madde-116" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 116 – Seçimlerin Yenilenmesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            <strong>Türkiye Büyük Millet Meclisi, üye tamsayısının beşte üç çoğunluğuyla seçimlerin yenilenmesine karar verebilir.</strong> Bu halde Türkiye Büyük Millet Meclisi genel seçimi ile Cumhurbaşkanlığı seçimi <strong>birlikte yapılır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Cumhurbaşkanının seçimlerin yenilenmesine karar vermesi halinde</strong>, Türkiye Büyük Millet Meclisi genel seçimi ile Cumhurbaşkanlığı seçimi <strong>birlikte yapılır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Cumhurbaşkanının ikinci döneminde Meclis tarafından seçimlerin yenilenmesine karar verilmesi halinde, Cumhurbaşkanı bir defa daha aday olabilir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Seçimlerinin birlikte yenilenmesine karar verilen Meclisin ve Cumhurbaşkanının yetki ve görevleri, yeni Meclisin ve Cumhurbaşkanının göreve başlamasına kadar devam eder.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Bu şekilde seçilen Meclis ve Cumhurbaşkanının görev süreleri de beş yıldır.
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Cumhurbaşkanının "Üçüncü Dönem" İstisnası</h6>
+          <p style="text-align: justify;" class="text-sm">Bu maddenin sınavlar açısından en can alıcı ve en çok sorulma potansiyeli olan kuralı şudur:</p>
+          <ul class="list-disc pl-5 text-sm space-y-1">
+            <li>Normalde bir kişi en fazla <strong>iki defa</strong> Cumhurbaşkanı seçilebilir (Md. 101).</li>
+            <li><strong>ANCAK</strong>, Cumhurbaşkanı ikinci döneminde görev yaparken, <strong>TBMM tarafından (360 oyla) seçimlerin yenilenmesine karar verilirse</strong>, mevcut Cumhurbaşkanı <strong>bir defa daha aday olabilir.</strong></li>
+            <li><strong>Özetle:</strong> Cumhurbaşkanının 3. kez aday olabilmesinin tek yolu, ikinci döneminde Meclis'in erken seçim kararı almasıdır.</li>
+          </ul>
+        </div>
+    </div>
+</details>
                 
                 
 </section>
